@startuml
class PoolElectronic {
    + void run()
    - void quack(ElectronicDuck)
    - void swim(ElectronicDuck)
    + {static} void main(String[])
}

class Pool {
    + void run()
    - void quack(Duck)
    - void swim(Duck)
    + {static} void main(String[])
}

class Duck {
    + void quack()
    + void swim()
}

class ElectronicDuck {
    - boolean _on
    + void quack()
    + void swim()
    + void turnOn()
    + void turnOff()
}

Pool --|> Duck
PoolElectronic --|> ElectronicDuck
@enduml
